--- a/goal.html
+++ b/goal.html
@@ -1,9 +1,16 @@
 <html>
   <head>
     <title>comp 3121</title>
-
+    <script type="text/javascript">
+      var queryString = window.location.search.slice(1);
+      // if query string exists
+      if (queryString){
+      qString=queryString.split('q=')[1].split('&')[0];
+      alert(qString);
+      }
+    </script>
   </head>
     <body>
-      GOAL
+      TBD
     </body>
     </html>
